2008-03-21  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, debug.d (gdb_show_stack): renamed from ext_show_stack
	* lispbibl.d (gdb_disassemble_closure): add protorype
	* debug.d (gdb_disassemble_closure): implement
	* constsym.d (disassemble_closures): add

2008-03-21  Sam Steingold  <sds@gnu.org>

	* eval.d (cclosure_run) [USE_JITC]: new local inline
	(interpret_bytecode) [USE_JITC]: use it instead of explicit code
	* lightning.c: use it instead of interpret_bytecode_()

2008-03-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [XCC_GCC]: add -falign-functions=4 on all
	CPUs - it cannot hurt and is required at least on AMD64

2008-03-18  Sam Steingold  <sds@gnu.org>

	* lightning.c: use jit_movi_p instead of jit_movi_l for pointers
	to avoid "warning: cast from pointer to integer of different size"

2008-03-18  Sam Steingold  <sds@gnu.org>

	* stream.d (push_ch): extracted from read_line
	(read_line): use it
	* spvw_debug (nobject_out1): handle arrays

2008-03-18  Sam Steingold  <sds@gnu.org>

	* makemake.in, lispbibl.d: USE_JITC requires HEAPCODES

2008-03-18  Drutsa Pavel  <rawlik@users.sourceforge.net>

	fix bug [ 1918017 ]: new-clx:gcontext-clip-mask does not set rectangles
	* modules/clx/new-clx/clx.f (XLIB:SET-GCONTEXT-CLIP-MASK): do not
	divide n by 4 when passing to XSetClipRectangles - it has already
	been done by get_seq_len()

2008-03-17  Sam Steingold  <sds@gnu.org>

	* lightning.c (jit_compile_): restore the semantics of byteptr_min
	as in interpret_bytecode_() (fixes --with-debug compilation)

2008-03-17  Sam Steingold  <sds@gnu.org>

	drop JITC objects before saving memory
	* debug.d (GC): accept optional argument to invalidate JITC objects;
	return 3 values (same as %ROOM)
	* subr.d (gc): update declaration
	* lightning.c (gc_drop_jitc): add variable
	* spvw_garcol.d (gar_col): accept level argument to invalidate
	JITC objects (when 1, set gc_drop_jitc to true)
	* lispbibl.d (gar_col): update prototype