@@ -89,9 +89,19 @@ and is supported by most &cl; implementations currently in use.</para>
   <listitem><simpara>Just like &file-position;, but &nil;
     <replaceable>position</replaceable> means inquire.</simpara>
    &need-defmethod;</listitem></varlistentry>
+ <varlistentry id="st-rd-seq"><term><code>(GRAY:STREAM-READ-SEQUENCE
+   &stream-r; &sequence-r; &key-amp; &start-k; &end-k;)</code></term>
+  <listitem><simpara>Used by &read-sequence;. <emphasis>Deprecated</emphasis>.
+    Define <function>GRAY:STREAM-READ-CHAR-SEQUENCE</function> and call
+    &rd-ch-seq; instead.</simpara></listitem></varlistentry>
+ <varlistentry id="st-wr-seq"><term><code>(GRAY:STREAM-WRITE-SEQUENCE
+   &stream-r; &sequence-r; &key-amp; &start-k; &end-k;)</code></term>
+  <listitem><simpara>Used by &write-sequence;. <emphasis>Deprecated</emphasis>
+    Define <function>GRAY:STREAM-WRITE-CHAR-SEQUENCE</function> and call
+    &wr-ch-seq; instead.</simpara></listitem></varlistentry>
 </variablelist>
 
-<variablelist><title>generic functions for character input</title>
+<variablelist><title>Generic functions for character input</title>
  <varlistentry id="st-rc"><term><code>(&st-rc; &stream-r;)</code></term>
   <listitem><simpara>If a character was pushed back using &st-uc;,
    returns and consumes it.  Otherwise returns and consumes the next
@@ -107,8 +117,7 @@ and is supported by most &cl; implementations currently in use.</para>
    immediately, returns &nil; instead of waiting.</simpara><simpara>
    The default method simply calls &st-rc;; this is sufficient for streams
    whose &st-rc; method never blocks.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-PEEK-CHAR</function>
-    &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-PEEK-CHAR &stream-r;)</code></term>
   <listitem><simpara>If a character was pushed back using &st-uc;,
    returns it.  Otherwise returns the next character from the stream,
    avoiding any side effects &st-rc; would do.  Returns &eof-k; if the
@@ -116,8 +125,7 @@ and is supported by most &cl; implementations currently in use.</para>
   <simpara>The default method calls &st-rc; and &st-uc;; this is
    sufficient for streams whose &st-rc; method has no
    side-effects.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-LISTEN</function>
-    &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-LISTEN &stream-r;)</code></term>
   <listitem><simpara>If a character was pushed back using &st-uc;,
    returns it.  Otherwise returns the next character from the stream, if
    already available.  If no character is available immediately, or if
@@ -125,7 +133,7 @@ and is supported by most &cl; implementations currently in use.</para>
   <simpara>The default method calls &st-rcnh; and &st-uc;; this is
    sufficient for streams whose &st-rc; method has no
    side-effects.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-READ-CHAR-WILL-HANG-P</function>
+ <varlistentry><term><code>(GRAY:STREAM-READ-CHAR-WILL-HANG-P
     &stream-r;)</code></term>
   <listitem><simpara>Returns &nil; if &st-rc; will return immediately.
    Otherwise it returns true.</simpara>
@@ -133,7 +141,7 @@ and is supported by most &cl; implementations currently in use.</para>
    sufficient for streams whose &st-rc; method has no side-effects.</simpara>
   <simpara>This function is a &clisp; extension (see &rcwhp;).</simpara>
   </listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-READ-CHAR-SEQUENCE</function> &stream-r;
+ <varlistentry><term><code>(GRAY:STREAM-READ-CHAR-SEQUENCE &stream-r;
    &sequence-r; &optional-amp; [&start-r; [&end-r;]])</code></term>
   <listitem><simpara>Fills the subsequence of &sequence-r; specified by
    &start-k; and &end-k; with characters consecutively read from &stream-r;.
@@ -148,23 +156,21 @@ and is supported by most &cl; implementations currently in use.</para>
    is always sufficient if speed does not matter.</simpara>
   <simpara>This function is a &clisp; extension (see
    &rd-ch-seq;).</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-READ-LINE</function>
-    &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-READ-LINE &stream-r;)</code></term>
   <listitem><simpara>Reads a line of characters, and return two values:
    the line (a &string-t;, without the terminating &nl-s; character),
    and a &boolean-t; value which is true if the line was terminated by
    &eos; instead of &nl-s;.</simpara>
   <simpara>The default method repeatedly calls &st-rc;; this
    is always sufficient.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-CLEAR-INPUT</function>
-    &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-CLEAR-INPUT &stream-r;)</code></term>
   <listitem><simpara>Clears all pending interactive input from the
    &stream-r;, and returns true if some pending input was removed.</simpara>
   <simpara>The default method does nothing and returns &nil;; this is
    sufficient for non-interactive streams.</simpara></listitem></varlistentry>
 </variablelist>
 
-<variablelist><title>generic functions for character output</title>
+<variablelist><title>Generic functions for character output</title>
  <varlistentry id="st-wc"><term><code>(&st-wc; &stream-r; &ch-r;)</code></term>
   <listitem><simpara>Writes &ch-r;.
    </simpara>&need-defmethod;</listitem></varlistentry>
@@ -173,14 +179,13 @@ and is supported by most &cl; implementations currently in use.</para>
    would be written (&zero; stands for the first column),
     or &nil; if that is not meaningful for this stream.
    </simpara>&need-defmethod;</listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-START-LINE-P</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-START-LINE-P &stream-r;)</code></term>
   <listitem><simpara>Returns true if the next character would be
    written at the start of a new line.</simpara>
   <simpara>The default method calls &st-lc; and compares its result with
    0; this is sufficient for streams whose &st-lc; never returns &nil;.
   </simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-WRITE-CHAR-SEQUENCE</function>
+ <varlistentry><term><code>(GRAY:STREAM-WRITE-CHAR-SEQUENCE
     &stream-r; &sequence-r; &optional-amp; [&start-r; [&end-r;]])</code></term>
   <listitem><simpara>Outputs the subsequence of &sequence-r; specified
    by &start-k; and &end-k; to &stream-r;.</simpara>
@@ -192,7 +197,7 @@ and is supported by most &cl; implementations currently in use.</para>
    is always sufficient if speed does not matter.
   </simpara><simpara>This function is a &clisp; extension
    (see &wr-ch-seq;).</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-WRITE-STRING</function>
+ <varlistentry><term><code>(GRAY:STREAM-WRITE-STRING
     &stream-r; &string-r; &optional-amp; [&start-r; [&end-r;]])</code></term>
   <listitem><simpara>Outputs the subsequence of &string-r; specified by
    &start-k; and &end-k; to &stream-r;.  Returns &string-r;.</simpara>
@@ -202,13 +207,11 @@ and is supported by most &cl; implementations currently in use.</para>
    </simpara><simpara>The default method calls
    <function>GRAY:STREAM-WRITE-CHAR-SEQUENCE</function>;
    this is always sufficient.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-TERPRI</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-TERPRI &stream-r;)</code></term>
   <listitem><simpara>Outputs a &nl-s; character.</simpara>
   <simpara>The default method calls &st-wc;; this is always
    sufficient.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-FRESH-LINE</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-FRESH-LINE &stream-r;)</code></term>
   <listitem><simpara>Possibly outputs a &nl-s; character, so as to ensure
    that the next character would be written at the start of a new line.
    Returns true if it did output a &nl-s; character.</simpara>
@@ -216,23 +219,20 @@ and is supported by most &cl; implementations currently in use.</para>
    <function>GRAY:STREAM-START-LINE-P</function> and then
    <function>GRAY:STREAM-TERPRI</function> if necessary; this is always
    sufficient.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-FINISH-OUTPUT</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-FINISH-OUTPUT &stream-r;)</code></term>
   <listitem><simpara>Ensures that any buffered output has reached its
    destination, and then returns.</simpara>
   <simpara>The default method does nothing.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-FORCE-OUTPUT</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-FORCE-OUTPUT &stream-r;)</code></term>
   <listitem><simpara>Brings any buffered output on its way towards its
    destination, and returns without waiting until it has reached its
    destination.</simpara>
   <simpara>The default method does nothing.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-CLEAR-OUTPUT</function>
-                 &stream-r;)</code></term>
+ <varlistentry><term><code>(GRAY:STREAM-CLEAR-OUTPUT &stream-r;)</code></term>
   <listitem><simpara>Attempts to discard any buffered output which has
    not yet reached its destination.</simpara>
   <simpara>The default method does nothing.</simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-ADVANCE-TO-COLUMN</function>
+ <varlistentry><term><code>(GRAY:STREAM-ADVANCE-TO-COLUMN
     &stream-r; &col-r;)</code></term>
   <listitem><simpara>Ensures that the next character will be written at
     least at &col-r;.</simpara>
@@ -241,7 +241,7 @@ and is supported by most &cl; implementations currently in use.</para>
  </listitem></varlistentry>
 </variablelist>
 
-<variablelist><title>generic functions for binary input</title>
+<variablelist><title>Generic functions for binary input</title>
  <varlistentry id="st-rb"><term><code>(&st-rb; &stream-r;)</code></term>
   <listitem><simpara>Returns and consumes the next integer from the
    stream. Returns &eof-k; if the &eos; is reached.</simpara>
@@ -273,7 +273,7 @@ and is supported by most &cl; implementations currently in use.</para>
     this is always sufficient.</simpara>
    <simpara>This function is a &clisp; extension (see &rbnh;).
  </simpara></listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-READ-BYTE-SEQUENCE</function>
+ <varlistentry><term><code>(GRAY:STREAM-READ-BYTE-SEQUENCE
      &stream-r; &sequence-r; &optional-amp;
       [&start-r; [&end-r; [&no-hang; [&interactive-r;]]]])</code></term>
   <listitem><simpara>Fills the subsequence of &sequence-r; specified by
@@ -294,12 +294,12 @@ and is supported by most &cl; implementations currently in use.</para>
     &rd-by-seq;).</simpara></listitem></varlistentry>
 </variablelist>
 
-<variablelist><title>generic functions for binary output</title>
- <varlistentry><term><code>(<function>GRAY:STREAM-WRITE-BYTE</function>
+<variablelist><title>Generic functions for binary output</title>
+ <varlistentry><term><code>(GRAY:STREAM-WRITE-BYTE
                  &stream-r; &int-r;)</code></term>
   <listitem><simpara>Writes &int-r;.</simpara>
    &need-defmethod;</listitem></varlistentry>
- <varlistentry><term><code>(<function>GRAY:STREAM-WRITE-BYTE-SEQUENCE</function>
+ <varlistentry><term><code>(GRAY:STREAM-WRITE-BYTE-SEQUENCE
      &stream-r; &sequence-r; &optional-amp;
       [&start-r; [&end-r; [&no-hang; [&interactive-r;]]]])</code></term>
   <listitem><simpara>Outputs the subsequence of &sequence-r; specified
